[package]
name = "neoethos-cli"
version = "0.4.41"
edition.workspace = true
# SPDX dual-license matches the repo-root LICENSE file. Required by both
# cargo-deb (writes Debian `control` License:) and cargo-generate-rpm.
license = "LicenseRef-Proprietary"
description = "NeoEthos headless CLI + TUI — a disciplined multi-model ML engine for FX strategy research and risk-aware execution."
homepage = "https://github.com/kosred/neoethos"
repository = "https://github.com/kosred/neoethos"
readme = "../../README.md"

[features]
default = []
# GPU features MIRROR neoethos-app EXACTLY. Discovery/training/eval MUST run
# identically whether invoked from the UI/backend or the CLI — no capability may
# differ between front-ends. So `--features gpu-vulkan` (or gpu-nvidia/gpu-rocm)
# builds the CLI with the SAME cubecl-wgpu / CUDA GPU eval the app uses; the
# headless/VPS path is no longer silently CPU-only.
gpu = ["gpu-nvidia"]
gpu-nvidia = ["neoethos-models/gpu-cuda", "neoethos-search/gpu-cuda"]
gpu-vulkan = ["neoethos-models/gpu-vulkan", "neoethos-search/gpu-vulkan"]
gpu-rocm = ["neoethos-models/gpu-rocm", "neoethos-search/gpu-rocm"]
gpu-apple = ["gpu-vulkan"]

[dependencies]
neoethos-core = { path = "../neoethos-core" }
neoethos-data = { path = "../neoethos-data" }
neoethos-models = { path = "../neoethos-models", features = ["tree-models", "pure-rust-ml"] }
neoethos-search = { path = "../neoethos-search" }
# The autonomous-trader engine. The CLI `trader-replay` command drives the SAME
# engine the app does (parity) over real on-disk history for an offline dry-run.
neoethos-trader = { path = "../neoethos-trader" }
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# `tracing` is consumed at every error-path in main.rs / tui/* for
# structured logging (warn!/debug!). Pre-existing usage; the dep
# line was inadvertently dropped during an earlier refactor and
# v0.4.5 needs it for `cargo check` to pass.
tracing = "0.1"
# Interactive TUI — used by `neoethos-cli` when invoked with no args.
# `crossterm` is the cross-platform terminal backend; `ratatui` is the
# rendering library. Together they give us Bloomberg-style fixed
# layouts with live progress + keyboard nav.
ratatui = { version = "0.29", features = ["crossterm"] }
crossterm = "0.28"
# Task #61 — `setup` subcommand needs the canonical user-config
# directory (`%APPDATA%\Roaming\neoethos\` on Windows,
# `~/.config/neoethos/` on Linux, `~/Library/Application Support/neoethos/`
# on macOS) so it prints the SAME path
# `neoethos-app::broker_persistence::credentials_file_path` reads from.
# Pinned to the same `dirs` version neoethos-app uses so both crates
# resolve to byte-identical paths (no `directories`-vs-`dirs` drift).
dirs = "5.0.1"

# ──────────────────────────────────────────────────────────────────────────────
# cargo-deb metadata — produces target/debian/neoethos-cli_<version>_<arch>.deb
# Spec: https://github.com/kornelski/cargo-deb
# Strategy ref: installer_no_paid_certs_strategy.md §3 (Linux .deb path, $0).
# ──────────────────────────────────────────────────────────────────────────────
[package.metadata.deb]
maintainer = "neoethos contributors <neoethos@users.noreply.github.com>"
copyright = "2024-2026, neoethos contributors; proprietary; all rights reserved"
license-file = ["../../LICENSE", "0"]
extended-description = """\
neoethos is an open-source quantitative trading workspace targeting \
the cTrader Open API. It includes data ingestion, ML-driven \
strategy search, paper / live trading orchestration, and a \
risk-aware execution gate. This package ships the headless CLI / TUI \
front-end."""
section = "finance"
priority = "optional"
assets = [
    ["target/release/neoethos-cli", "usr/bin/", "755"],
    ["../../assets/symbol_metadata/defaults.json", "usr/share/neoethos/symbol_metadata/", "644"],
    ["../../LICENSE", "usr/share/doc/neoethos/", "644"],
    ["../../README.md", "usr/share/doc/neoethos/", "644"],
]
# Opt-in autostart only via the in-app wizard — never enable the unit on
# install. (Wizard §9: user controls autonomous-watchdog autostart.)
systemd-units = { enable = false }

# ──────────────────────────────────────────────────────────────────────────────
# cargo-generate-rpm metadata — produces target/generate-rpm/neoethos-cli-*.rpm
# Spec: https://github.com/cat-in-136/cargo-generate-rpm
# ──────────────────────────────────────────────────────────────────────────────
[package.metadata.generate-rpm]
name = "neoethos-cli"
license = "LicenseRef-Proprietary"
assets = [
    { source = "target/release/neoethos-cli", dest = "/usr/bin/neoethos-cli", mode = "0755" },
    { source = "assets/symbol_metadata/defaults.json", dest = "/usr/share/neoethos/symbol_metadata/defaults.json", mode = "0644" },
    { source = "LICENSE", dest = "/usr/share/doc/neoethos/LICENSE", mode = "0644" },
    { source = "README.md", dest = "/usr/share/doc/neoethos/README.md", mode = "0644" },
]

