[package]
name = "neoethos-codex"
version = "0.4.40"
edition.workspace = true
description = "ChatGPT Plus/Pro OAuth fallback for NeoEthos — uses the OpenAI Codex CLI's PKCE flow."
license = "LicenseRef-Proprietary"

# ── Why this crate exists ──────────────────────────────────────────────────────
# The local Gemma runtime (neoethos-gemma) abort()s the backend when an
# operator points it at a non-standard GGUF (#197 / #202 / #208). Users who
# already pay for ChatGPT Plus or Pro should be able to plug their existing
# subscription in instead, with NO API key entry — the OpenAI Codex CLI
# established a PKCE OAuth flow exactly for that purpose. We replicate it.
#
# Reference: github.com/openai/codex (the public Codex CLI) and the
# `opencode-openai-codex-auth` community write-up. Key facts we mirror:
#   - CLIENT_ID is a published constant: `app_EMoamEEZ73f0CkXaXp7hrann`
#   - Authorization issuer: https://auth.openai.com
#   - Token endpoint:        https://auth.openai.com/oauth/token
#   - Callback URI:          http://localhost:1455/auth/callback
#   - Scopes:                "openid profile email offline_access"
#   - Response type:         "code" with PKCE S256
#   - Token storage:         ~/.codex/auth.json (we read/write the same file
#                            so operators who already used the Codex CLI
#                            don't have to re-auth, and vice-versa)
#   - API base for chat:     https://chatgpt.com/backend-api
#
# The OAuth flow is the SAME flow the official Codex CLI uses — no
# password capture, no client_secret. ChatGPT Plus users can authenticate
# their existing subscription. We never see their credentials; OpenAI does
# the password check on auth.openai.com and hands us back a code.

[dependencies]
anyhow.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
# PKCE S256 needs sha256 + url-safe base64. `sha2` is already in the
# workspace transitively but we depend on it directly so the crate
# compiles standalone. `base64` 0.22 is the current stable major.
sha2 = "0.10"
base64 = "0.22"
url = "2.5"
# Loopback HTTP listener for the OAuth callback. We can't reuse axum
# from neoethos-app (cyclic dep), so use a hand-rolled tiny listener
# on a fresh tokio TcpListener. Total code is ~100 LOC.
rand = "0.9.2"
# Token persistence. directories crate gives us a cross-platform
# "user config dir" that matches what the Codex CLI uses for the
# default `~/.codex/auth.json` location.
directories = "5.0"

[features]
default = []
