[package]
name = "neoethos-core"
version = "0.5.6"
edition.workspace = true
license.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10.0"
config = "0.15.19"
tracing = "0.1.42"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
# tracing-appender: daily-rotating file logger. Wired into `logging::setup_logging`
# alongside the console layer so each session writes to
# `<user-data-dir>/neoethos/logs/neoethos.YYYY-MM-DD.log`. Old files (> 7 days)
# are deleted at startup to keep the directory clean — the user explicitly
# requested "logs of today, not garbage from days/months ago".
tracing-appender = "0.2.4"
# Platform-correct user-data dir for log storage. Same version as neoethos-app.
dirs = "5.0.1"
# F-102 fix (2026-05-25): `tokio` removed from neoethos-core dependencies.
# Verified via `grep "use tokio|tokio::|#[tokio::"` — ZERO call sites in
# the entire crate. The previous `features = ["full"]` pulled the
# complete tokio runtime (~50 transitive crates) into a foundation
# layer that does nothing async. Crates that DO need tokio (e.g.
# neoethos-app, neoethos-cli) depend on it directly with minimal
# features instead.
sysinfo = "0.37.2"
anyhow = "1.0.100"
thiserror = "2.0.16"
# Pinned to 0.37 to share libsqlite3-sys 0.35 with burn-dataset (transitively
# pulled via burn 0.21's default `burn-core/default` set). Cargo refuses to
# link two different native `sqlite3` libs (libsqlite3-sys 0.35 vs 0.36 in
# rusqlite 0.38). Our usage (Connection::open + params! + query — see
# storage.rs) is stable across both, so 0.37 is a clean choice.
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
ndarray = "0.17.2"
# reqwest >= 0.13.3 logs only the host, not the full URL — protects client_secret from leaking to debug/trace logs.
# In 0.13, `form`/`query` are opt-in features (per the 0.13.0 CHANGELOG).
reqwest = { version = "0.13.3", default-features = true, features = ["rustls", "json", "blocking", "query", "form"] }
# API key wrapped in `secrecy::SecretString` (a `Box<str>` that cannot
# reallocate, zeroized on drop). The zeroize upstream docs explicitly point
# users to `secrecy` for string-shaped secrets because `Zeroizing<String>`
# leaves un-zeroed reallocated buffers on the heap.
secrecy = "0.10"
# TOML serializer for the broker credentials file. Owns the
# canonical on-disk shape so both neoethos-app and neoethos-cli can
# read + write `broker_credentials.toml` without a workspace cycle.
toml = "0.8.20"

[target.'cfg(windows)'.dependencies]
# F-101 follow-up (2026-05-25 — corrected after verbose build):
# pruned from the previous 4-feature set down to the 3 actually
# used after `utils/window_control.rs` was deleted:
#   - `Win32_System_Console` — CLI console-mode detection
#   - `Win32_UI_WindowsAndMessaging` — the startup MessageBox dialog
#     in `logging.rs:140` (no-tty fallback)
#   - `Win32_Foundation` — required by the WindowsAndMessaging types
# `Win32_UI_Input_KeyboardAndMouse` was the only feature truly orphaned
# by the F-101 deletion.
# Keep this exact pin aligned with wgpu-hal 29.0.3's gpu-allocator 0.28.0.
# gpu-allocator's Windows constraint ends at 0.62.0; allowing Cargo to select
# 0.62.1+ gives wgpu-hal two incompatible WinRT/D3D12 type families.
windows = { version = "=0.62.0", features = [
    "Win32_Foundation",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }
