[package]
name = "neoethos-data"
version = "0.4.41"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4"
neoethos-core = { path = "../neoethos-core" }
csv = "1.3"
polars = { version = "0.52.0", features = ["lazy", "dtype-full", "temporal", "timezones", "parquet", "ipc"] }
ndarray = { version = "0.17.2", features = ["rayon"] }
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
# Pin aligned 2026-05-26 with workspace `[patch.crates-io]` which redirects
# this dep to `vendor/vector-ta-0.2.9-patched/`. The previous `0.2.4` pin was
# silently overridden by the patch entry (verified via `cargo tree -i vector-ta`
# which has always shown 0.2.9). Bumping the literal makes the intent obvious
# to anyone reading this file and prevents a future patch removal from silently
# downgrading the binary.
vector-ta = { version = "0.2.9" }
memmap2 = "0.9.5"
# Recursive filesystem walk used by core::discover. Latest stable
# (verified on crates.io 2026-05-14): 2.5.0.
walkdir = "2.5"
vortex-array = "0.67.0"
vortex-buffer = { version = "0.67.0", features = ["memmap2"] }
vortex-file = "0.67.0"
vortex-io = "0.67.0"
vortex-layout = "0.67.0"
vortex-session = "0.67.0"

