[package]
name = "neoethos-models"
version = "0.5.6"
edition.workspace = true

[dependencies]
neoethos-data = { path = "../neoethos-data" }
neoethos-core = { path = "../neoethos-core" }
neoethos-search = { path = "../neoethos-search" }
ndarray = { version = "0.17.2", features = ["rayon", "serde"] }
tch = { version = "0.22.0", optional = true }
ort = { version = "2.0.0-rc.10", optional = true, features = ["cuda", "copy-dylibs"] }
tracing = "0.1.42"
anyhow = "1.0.100"

# Tree model dependencies
polars = { version = "0.52.0", features = ["lazy", "dtype-datetime", "rolling_window", "timezones"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
seq-macro = "0.3.6"

# Tree model FFI bindings
lightgbm3 = { version = "1.0.8", optional = true }
xgb = { version = "3.0.5", optional = true }
catboost-rust = { version = "0.3.6", optional = true, features = ["gpu"] }
sklears = { version = "0.1.1", optional = true, features = ["tree"] }
candle-core = { version = "0.9.1", optional = true }
# cubecl 0.10 — pure defaults. Defaults already include cubecl-core,
# cubecl-cuda?, cubecl-cpu?, cubecl-hip?, cubecl-wgpu? (all optional —
# only activated when something else turns them on). NO explicit
# runtime feature forced from here; the consumer (burn-wgpu via its
# own defaults) decides which runtime to pull. This avoids the
# wgpu/Naga SPIR-V path that crashes the AMD Vulkan Windows driver
# (gfx-rs/wgpu issues #6329/#7198/#5733), confirmed 2026-05-26.
cubecl = { version = "0.10.0", optional = true }

# Pure Rust Evolutionary & Reinforcement Learning
crfmnes = { version = "1.0.0", optional = true }
rlkit = { version = "0.0.3", optional = true }
irithyll = { version = "6.3.0", optional = true }
ruv-swarm-ml = { version = "1.0.5", optional = true }
symbios-neat = "0.1.2"
symbios-genetics = "0.1.3"

# Statistical & Anomaly Detection
linfa = { version = "0.7.0", optional = true }
linfa-linear = { version = "0.7.0", optional = true }
linfa-logistic = { version = "0.7.0", optional = true }
linfa-clustering = { version = "0.7.0", optional = true }
variational-regression = { version = "0.1.0", optional = true }
extended-isolation-forest = { version = "0.2.0", optional = true, features = ["serde"] }

# Burn framework — Vulkan Tier-1 perf push (2026-05-25).
#
# burn 0.20→0.21 + cubecl 0.9→0.10, with FULL default features
# preserved across all three crates so we don't accidentally drop
# performance-critical defaults like `autotune` (the kernel
# auto-selector that gives 1.5-3× matmul speedups), `fusion`
# (element-wise + reduction op fusion, 70×+ on fusable subgraphs),
# or the cubecl kernel variants that autotune picks between.
#
# `vulkan` is added on top of the defaults — it pulls cubecl-spirv
# for direct Naga→SPIR-V compilation (~5-15% kernel-launch win) and
# is the only path to AMD/Intel GPUs since cuda is NVIDIA-only.
# `autodiff` on `burn` is needed because we use Autodiff<Wgpu> in
# the training pipeline.
# burn / burn-ndarray / burn-wgpu — PURE defaults.
#
# burn-wgpu defaults = [std, autotune, fusion, burn-cubecl/default,
# cubecl/default]. Autotune + fusion (the perf features we want) are
# IN the defaults. NO need to override anything. Adding `vulkan` or
# `cubecl-spirv` would force the SPIR-V shader path which crashes the
# AMD Vulkan Windows driver on Naga-generated shaders. Leaving the
# defaults lets wgpu pick the safer WGSL path on AMD.
#
# `autodiff` on burn is the only explicit feature — we use Autodiff<Wgpu>
# in the training pipeline.
burn = { version = "0.21", features = ["autodiff"] }
burn-ndarray = { version = "0.21" }
burn-wgpu = { version = "0.21", optional = true }
# Native CUDA backend for the Burn neural models (TabNet/KAN/N-BEATS/TiDE/
# TimesNet/transformer). Reuses the SAME cubecl 0.10.0 + cubecl-cuda stack the
# discovery kernels already build, so there is no version split. Enabled by the
# `gpu-cuda` aggregate so the NVIDIA build trains neural nets on the card in f32
# (Ampere-native) instead of falling back to burn-ndarray (CPU).
burn-cuda = { version = "0.21", optional = true }

num_cpus = "1.17.0"
rand = "0.9.2"
rand08 = { package = "rand", version = "0.8", optional = true }
# Ziggurat-method `StandardNormal` sampler — correct tails by construction,
# replaces the hand-rolled Box-Muller that produced 30+ sigma outliers.
# MUST stay on 0.5.x: rand_distr 0.6.0 requires `rand 0.10::Rng` trait,
# but `rand_xoshiro 0.7.0` (transitively pulled by argmin → scirs2-optimize)
# does not yet impl `rand 0.10::Rng` for `Xoroshiro128PlusPlus`. Compile
# breaks with E0277 ("the trait bound `Xoroshiro128PlusPlus: scirs2_core::Rng`
# is not satisfied") if 0.6 is selected. Revisit once rand_xoshiro publishes
# a 0.7.1+ that targets rand 0.10. (ML research agent suggested 0.6 without
# checking this dep chain — exactly the kind of stale-info bug the user
# warned about.)
rand_distr = "0.5"
rayon = "1.11.0"
chrono = "0.4.44"
rand_xoshiro = "0.7.0"
nalgebra = "0.33.0"

[features]
default = ["tree-models", "pure-rust-ml"]
onnx = ["dep:ort"]
tch = ["dep:tch"]
lightgbm = ["dep:lightgbm3"]
lightgbm-gpu = ["lightgbm", "lightgbm3/gpu", "lightgbm3/cuda"]
xgboost = ["dep:xgb"]
catboost = ["dep:catboost-rust"]
sklears-tree = ["dep:sklears"]
tree-models-core = ["lightgbm", "xgboost", "sklears-tree"]
tree-models = ["tree-models-core", "catboost"]

# Pure Rust ML features
neuro-evolution = ["dep:crfmnes", "dep:rand08"]
neuro-evolution-gpu = ["neuro-evolution", "dep:cubecl"]
reinforcement-learning = ["dep:rlkit", "dep:candle-core"]
reinforcement-learning-cuda = ["reinforcement-learning", "rlkit/cuda", "candle-core/cuda"]
adaptive-models = ["dep:irithyll"]
swarm-forecasting = ["dep:ruv-swarm-ml"]
statistical-models = ["dep:linfa", "dep:linfa-linear", "dep:linfa-logistic", "dep:linfa-clustering", "dep:variational-regression"]
statistical-gpu = ["statistical-models", "dep:cubecl"]
anomaly-detection = ["dep:extended-isolation-forest"]

# Burn pure-Rust deep learning (production backend)
burn-wgpu-backend = ["dep:burn-wgpu"]
burn-cuda-backend = ["dep:burn-cuda"]
burn-backend = []
pure-rust-ml = ["neuro-evolution", "reinforcement-learning", "adaptive-models", "swarm-forecasting", "burn-backend", "statistical-models", "anomaly-detection"]

# #205 vendor-aware GPU aggregates. Each maps the per-library GPU flags
# above to a single feature the top-level binary can enable. Picking
# the wrong vendor for the host (e.g. `gpu-cuda` without NVIDIA) makes
# the LINK step fail — that's better than silently shipping a binary
# that crashes at startup because libcuda.dll is absent.
#
# - gpu-cuda    →  NVIDIA path: cubecl(cuda) + lightgbm(cuda+gpu) +
#                  candle(cuda) + ort(cuda).
# - gpu-vulkan  →  Cross-vendor path: burn-wgpu(Vulkan ICD). Works on
#                  AMD Radeon, Intel Arc/Iris, NVIDIA (via Vulkan
#                  driver), and even Apple Silicon (MoltenVK shim).
#                  Does NOT cover candle/cubecl/lightgbm — those are
#                  NVIDIA-CUDA-only today, so on a non-NVIDIA box only
#                  Burn-driven training accelerates. Document this gap.
# - gpu-rocm    →  AMD discrete (Linux only). candle 0.x has a `cuda`
#                  feature but not `rocm`; for ROCm we currently fall
#                  back to burn-wgpu(Vulkan) which works on RDNA cards
#                  via radv/amdvlk. Real ROCm support is a candle
#                  upstream blocker.
gpu-cuda = [
    "neuro-evolution",
    "dep:cubecl",
    # NOTE: `burn-cuda-backend` is deliberately NOT enabled here. Empirically
    # (2026-06-10, A6000) burn-cuda 0.21 is pathological for our TINY neural
    # models: cubecl re-autotunes every distinct matmul shape (338 autotune
    # passes vs 14 real epochs in 74 min on one combo) and hits burn-tensor
    # dtype panics. These models train in ~17 min TOTAL on burn-ndarray (CPU)
    # and are stable. The GPU's job in this system is DISCOVERY (large batched
    # backtests); the tiny per-model matmuls are launch/autotune-bound and
    # belong on the CPU. The dep + `burn-cuda-backend` feature are kept so a
    # future build with genuinely large models can opt in via
    # `--features gpu-cuda,burn-cuda-backend`.
    "statistical-models",
    # LightGBM is CPU-only by design: `lightgbm3/cuda` does NOT actually build a
    # GPU tree learner (runtime dies with "[LightGBM] [Fatal] GPU Tree Learner
    # was not enabled in this build") and the OpenCL path fails to link. Gradient
    # boosting on our 10^4-10^5 row folds is seconds on CPU, so the GPU buys
    # nothing here — see effective_device_type() in tree_models/lightgbm.rs.
    "lightgbm",
    "reinforcement-learning",
    "rlkit/cuda",
    "candle-core/cuda",
]
gpu-vulkan = ["burn-wgpu-backend"]
gpu-rocm = ["burn-wgpu-backend"]

