[package]
name = "neoethos-news"
version = "0.4.19"
edition.workspace = true

[dependencies]
# All shared deps go through the workspace pins so a single
# `reqwest = "0.13.3"` / `tokio = "1.49.0"` etc. is in the graph.
# Pre-fix this crate had reqwest 0.12, which forced cargo to compile
# BOTH 0.12 and 0.13 side-by-side (the rest of the workspace is on
# 0.13.3). The other 0.12 in the graph still comes from
# `object_store` transitively through polars 0.52 — that one will
# disappear when polars is upgraded to 0.53+.
anyhow.workspace = true
reqwest.workspace = true
secrecy = "0.10.3"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
neoethos-core = { path = "../neoethos-core" }

[dev-dependencies]
tokio.workspace = true

