[package]
name = "neoethos-search"
version = "0.4.40"
edition.workspace = true

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.44"
# cubecl 0.10 — pure defaults; runtime selection happens downstream.
# See neoethos-models/Cargo.toml for the full reasoning (AMD Vulkan
# SPIR-V driver crash avoidance).
cubecl = { version = "0.10.0", optional = true }
ndarray = { version = "0.17.2", features = ["rayon"] }
half = { version = "2.5", optional = true, default-features = true, features = ["alloc", "num-traits"] }
itertools = "0.14.0"
rand = "0.9.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
statrs = "0.18.0"
tracing = "0.1.42"  # aligned with workspace.dependencies (2026-05-26)
neoethos-data = { path = "../neoethos-data" }
neoethos-core = { path = "../neoethos-core" }
duckdb = { version = "1.1.1", optional = true, features = ["bundled"] }
tch = { version = "0.22.0", optional = true }

[features]
default = []
# `gpu`: pulls in the GPU dep chain — cubecl 0.9 for the SL/TP-faithful
# eval/backtest kernel (`cubecl_eval.rs`) and tch 0.22 for CUDA device
# enumeration. After audit 2026-05-24 the legacy `discovery_gpu` +
# `hpc_gpu_discovery` + `hpc` modules were removed (~3132 LOC of orphan
# code targeting Hyperstack-N3 specifically); generic multi-GPU support
# now lives inside `cubecl_eval.rs` itself and scales 1→N devices via
# `tch::Cuda::device_count()`.
gpu = ["dep:tch", "dep:cubecl", "dep:half"]
# #205: vendor-aware aliases so the top-level binary can pick a path
# without knowing the internals. Today cubecl/tch is CUDA-only, so
# `gpu-cuda` is the only one that actually wires anything; `gpu-vulkan`
# and `gpu-rocm` are silent no-ops at this layer (Burn-wgpu handles
# Vulkan downstream in neoethos-models). When cubecl ships a Vulkan
# kernel or tch ships ROCm, wire them here in the same shape.
gpu-cuda = ["gpu"]
gpu-vulkan = []
gpu-rocm = []
strategy-db = ["dep:duckdb"]

